--- a/okteto-pipeline.yml
+++ b/okteto-pipeline.yml
@@ -1,4 +1,7 @@
-OKTETO_TOKEN: najmalshammal22@cloud.okteto.com
+icon: https://img.shields.io/github/v/release/ITZ-ZAID/Zaid-Vc-Player?color=black&logo=github&logoColor=black&style=social
+
 deploy:
-    - okteto stack deploy --build -f docker-compose.yml
+
+    - najmalshammal22@cloud.okteto.com deploy --build -f docker-compose.yml
+
 
