--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       OWNER_USERNAME: $OWNER_USERNAME
       OWNER_ID: $OWNER_ID
       OWNER_NAME: $OWNER_NAME
+      OKTETO_TOKEN: $OKTETO_TOKEN
       HEROKU_APP_NAME: $HEROKU_APP_NAME
       HEROKU_API_KEY: $HEROKU_API_KEY
       START_PIC: $START_PIC
